--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "knex": "^3.1.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
